# barricador-python-client

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
barricador/: __init__.py  aio.py  client.py  store.py
barricator/: __init__.py  aio.py  client.py  context.py  evaluation.py  murmur.py  transport.py
tests/: test_evaluation.py
