[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "barricator-client"
version = "0.1.0"
description = "Barricator production-grade Python Server SDK (local evaluation, SSE sync, telemetry)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = []  # standard library only (urllib, threading, asyncio)

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["barricator*"]
